# linkmycomputer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-android.yml  release-host.yml
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/linkmycomputer/player/: LanControlServer.kt  PlayerActivity.kt  TouchOverlayView.kt  TouchTracker.kt
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/linkmycomputer/player/: TouchTrackerTest.kt
client/: index.html  package-lock.json  package.json  tsconfig.json
client/host-core/: Cargo.toml
client/host-core/src/: lib.rs  main.rs  pipeline.rs  session.rs
client/host-core/src/capture/: dxgi.rs
client/host-core/src/config/: profile.rs
client/host-core/src/encode/: nvenc.rs
client/host-core/src/input/: mapping.rs  mod.rs
client/host-core/src/input/mumu/: adb.rs  bridge.rs  minitouch.rs  mod.rs
client/host-core/src/protocol/: control.rs
client/host-core/src/transport/: webrtc.rs
client/host-core/tests/: mapping_test.rs  mumu_test.rs  pipeline_test.rs  profile_test.rs  protocol_test.rs  session_test.rs
client/src/: main.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/lib/: api.ts
client/src/pages/: Session.test.tsx  Session.tsx
docs/plans/: 2026-02-16-mumu-lan-remote-control-design.md  2026-02-16-mumu-lan-remote-control-implementation.md
shared/proto/: control.proto
